--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <title>Restaurant</title>
 </head>
 <body>
+    <nav class="navContainer"></nav>
+        <img class="logo" src="" alt="">
+    <img class="banner" src="" alt="">
+    <div class="cardContainer">
+        <div class="card1"></div>
+        <div class="card2"></div>
+        <div class="card3"></div>
+    </div>
+    <div tabContainer>
+        <div class="story"></div>
+        <div class="menu"></div>
+        <div class="reservations"></div>
+    </div>
+    <div class="photos">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+    </div>
+    <footer></footer>
+
     <script src="main.js"></script>
 </body>
 </html>
