added cardlist css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="cardlist.css">
+    <link rel="stylesheet" href="photos.css">
     <title>Restaurant</title>
 </head>
 <body>
@@ -11,9 +13,9 @@
         <img class="logo" src="" alt="">
     <img class="banner" src="" alt="">
     <div class="cardContainer">
-        <div class="card1"></div>
-        <div class="card2"></div>
-        <div class="card3"></div>
+        <div id="card1"></div>
+        <div id="card2"></div>
+        <div id="card3"></div>
     </div>
     <div tabContainer>
         <div class="story"></div>
@@ -30,5 +32,6 @@
     <footer></footer>
 
     <script src="main.js"></script>
+
 </body>
 </html>
