--- a/index.html
+++ b/index.html
@@ -16,10 +16,18 @@
         <div class="card3"></div>
     </div>
     <div tabContainer>
-        <div class="story"></div>
-        <div class="menu"></div>
-        <div class="reservations"></div>
+        <div id ="tab-button">
+            <button data-target="buttonCon-sty" id = "story" class="story"></button>
+            <button data-target="buttonCon-men" id ="menu" class="menu"></button
+            <button data-target="buttonCon-res" id ="reservation" class="reservations"></button>
+        </div>
+        <div id ="buttonCon-sty"></div>
+        <div id ="buttonCon-men"></div>
+        <div id ="buttonCon-res"></div>
+
     </div>
+    
+
     <div class="photos">
         <img src="" alt="">
         <img src="" alt="">
@@ -30,5 +38,6 @@
     <footer></footer>
 
     <script src="main.js"></script>
+    <script src ="tab-menu.js"></script>
 </body>
 </html>
