--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div tabContainer>
         <div id ="tab-button">
             <button data-target="buttonCon-sty" id = "story" class="story"></button>
-            <button data-target="buttonCon-men" id ="menu" class="menu"></button
+            <button data-target="buttonCon-men" id ="menu" class="menu"></button>
             <button data-target="buttonCon-res" id ="reservation" class="reservations"></button>
         </div>
         <div id ="buttonCon-sty"></div>
