--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
         <div id ="buttonCon-men"></div>
         <div id ="buttonCon-res"></div>
 
+        <div id="ourstory">
+            <p>Our Story begins in the year 1887. During that time four families joined together (the Marrissa's, the Calvin's the Elena's and the Candice’s) creating what we know today as ... The Marissa's harvested crabs and had many uses for crabs including creating tools and weapons from their hard shell's. It wasn't until 1901 when their land was suffering from famine, that they began consuming crabs for survival. They quickly became master chefs of crab and later renamed their tribe the Crabalonians. The Marissa's traveled from land to land sharing their wisdom of crabs until they settled on an island called Calvinite that inhabited the Calvin's. They were already well known chef’s (a passed down tradition through many generations). Their expertise in the many ways of cooking fish was unheard of during that time. The Marissa's and the Calvin's were in competition for many years until they decided to break tradition and merge. They harvested so much that seafood was becoming scarce; so they packed up and sailed the seas delivering their services all over the world.</p>    
+            <img src="https://i.ebayimg.com/images/g/Cg0AAOSwNsdXQ4lN/s-l1600.jpg" height="400" width="945px" alt="">
+            <p>That is when they met the Elena's and the Candice’s, who were originally working separately and also united their families. The Elena's were experts in shrimping and preparing meals centered around shrimp. They used shrimp as medicine to heal their people and made clothing and shoes from the shrimp they harvested. They were the first ever to gather shrimp for food and be outcasted by other tribes for their practices. Similarly, the Candice’s were a tribe of women that knew everything about claims,  muscles and scallops. However, they used clams and muscles for jewelry and weapons but primarily for their source of food. They were also outcasted by surrounding tribes. The Elena's and Candice's started trading with each other before deciding to work together. During the travel's of the Marissa's and the Calvin’s, they came across the island where the Elena's and Candice's were and liked what they tasted. The Elena's and the Candice's were invited to join the Marissa's and the Calvin’s. They accepted and traveled far before settling in Delaware where the seafood was plentiful. This was the beginning of… Each family has since  passed down their right to the business for generations and now we are here, the current owners representing a unique past where our four families joined and grew as one.</p>
+
+        </div>
+
+
     </div>
     
 
