update html and cardlistCSS

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     
     <div class="cardContainer">
         <div id="card1">
-            <header>Latest News</header>
-            <h1 style="font-style:bold;font-size: 15px;">Lorem ipsum dolor sit amet Jun 7</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            <header class="cardheader">Latest News</header>
+            <h1 class="cardtitle"style="font-style:bold;font-size: 15px;">Lorem ipsum dolor sit amet Jun 7</h1>
+            <p clasee="cardp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                 Nullam condimentum est diam, nec tincidunt arcu ornare eu. 
                 Ut a massa orci. Nullam sapien nisi, vehicula quis eleifend nec, 
                 maximus sit amet felis. Maecenas eget ipsum ut sapien lobortis 
@@ -37,13 +37,19 @@
                 bibendum. Vestibulum gravida sodales mi id convallis.</p>
         </div>
         <div id="card2">
-            <header>Today's Special</header>
-            <p></p>
+            <header class="cardheader">Today's Special</header>
+            <img src="https://images.unsplash.com/photo-1522933001375-72d29575cf05?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=8" width="100%" height="135px">
+            <h1 class="cardtitle"> Lorem ipsum dolor sit amet...................................27</h1>
+            <p clasee="cardp">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Nullam condimentum est diam, nec tincidunt arcu ornare eu.</p>
         </div>
         <div id="card3">
-            <header>Our Location</header>
+            <header class="cardheader">Our Location</header>
+            <img src="#" alt="">
+            <p class="address">20298 Coastal Highway
+                Rehoboth Beach, Delaware, 19971</p>
         </div>
-            <p></p>
+            
     </div>
     <div tabContainer>
         <div id ="tab-button">
