--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
         <img src="" alt="">
         <img src="" alt="">
     </div>
-    <footer></footer>
+    <footer class="footcontainer">
+        <p class="footerp">@ 2020 delaware's big fish grill</p>
+    </footer>
+
+
 
     <script src="main.js"></script>
     <script src ="tab-menu.js"></script
