updated foodphoto html and css

--- a/index.html
+++ b/index.html
@@ -75,12 +75,13 @@
     </div>
     
 
-    <div class="photos">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+    <div class="photocontainer">
+        <header class="phototitle">Food Photos...</header>
+        <div class="foodphotos"><img src="" alt=""></div>
+        <div class="foodphotos"><img src="" alt=""></div>
+        <div class="foodphotos"><img src="" alt=""></div>
+        <div class="foodphotos"><img src="" alt=""></div>
+        <div class="foodphotos"><img src="" alt=""></div>
     </div>
     <footer class="footcontainer">
         <p class="footerp">@ 2020 delaware's big fish grill</p>
