--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 Donec blandit vulputate erat, sit amet pretium massa venenatis et. 
                 Praesent at urna sem. Integer tincidunt tempor mauris sit amet rutrum. 
                 Nulla sit amet dignissim nisi. Vestibulum sagittis metus et sem consectetur
-                bibendum. Vestibulum gravida sodales mi id convallis.</p>
+                bibendum. </p>
         </div>
         <div id="card2">
             <header class="cardheader">Today's Special</header>
@@ -51,7 +51,7 @@
             <p class="address" style="text-align:center">
                 20298 Coastal Highway </br>
                 Rehoboth Beach, Delaware, 19971 </br>
-                302-277-FISH . 302-277-FISH . Map . Directions
+                302-277-FISH . 302-277-FISH . <a href="https://www.google.com/maps/place/20298+Coastal+Hwy,+Rehoboth+Beach,+DE+19971/@38.710637,-75.098846,15z/data=!4m5!3m4!1s0x89b8b637adf69b7b:0xc99371e1d40cb5cd!8m2!3d38.7106372!4d-75.0988465?hl=en">Map</a> . <a href="https://www.google.com/maps/dir//20298+Coastal+Hwy,+Rehoboth+Beach,+DE+19971/@38.710637,-75.098846,15z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89b8b637adf69b7b:0xc99371e1d40cb5cd!2m2!1d-75.0988465!2d38.7106372?hl=en">Directions </a>
             </p>
             
 
@@ -107,7 +107,7 @@
             <img src="https://images.unsplash.com/photo-1590759668642-c596ae357a42?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTEzfHxzZWElMjBmb29kfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px"></div>
     </div>
     <footer class="footcontainer">
-        <p class="footerp">@ 2020 delaware's big fish grill</p>
+        <p class="footerp">&#169; 2020 Copyright Big Fish Restaurant Group All Rights Reserved</p>
     </footer>
 
 
