--- a/index.html
+++ b/index.html
@@ -132,16 +132,11 @@
             
         <div class="photocontainer" id ="photoCon">
             <header class="phototitle">Food Photos...</header>
-            <div class="foodphotos">
-                <img src="https://images.unsplash.com/photo-1580376259349-5f4b7db4c39f?ixid=MXwxMjA3fDB8MHxzZWFyY2h8M3x8c2VhJTIwZm9vZHxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px"></div>
-            <div class="foodphotos">
-                <img src="https://images.unsplash.com/photo-1579712267685-42da80f60aa4?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mjd8fHNlYSUyMGZvb2R8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px"></div>
-            <div class="foodphotos">
-                <img src="https://images.unsplash.com/photo-1598298125949-4c3eba287609?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MjV8fHNlYSUyMGZvb2R8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px"></div>
-            <div class="foodphotos">
-                <img src="https://images.unsplash.com/photo-1565792508517-94b63bb06dac?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NTB8fHNlYSUyMGZvb2R8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px"></div>
-            <div class="foodphotos">
-                <img src="https://images.unsplash.com/photo-1590759668642-c596ae357a42?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTEzfHxzZWElMjBmb29kfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px"></div>
+                <img src="https://images.unsplash.com/photo-1580376259349-5f4b7db4c39f?ixid=MXwxMjA3fDB8MHxzZWFyY2h8M3x8c2VhJTIwZm9vZHxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px">
+                <img src="https://images.unsplash.com/photo-1579712267685-42da80f60aa4?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mjd8fHNlYSUyMGZvb2R8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px">
+                <img src="https://images.unsplash.com/photo-1598298125949-4c3eba287609?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MjV8fHNlYSUyMGZvb2R8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px">
+                <img src="https://images.unsplash.com/photo-1565792508517-94b63bb06dac?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NTB8fHNlYSUyMGZvb2R8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px">
+                <img src="https://images.unsplash.com/photo-1590759668642-c596ae357a42?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTEzfHxzZWElMjBmb29kfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px">
         </div>
     </div>
 
