remove extra tab container

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>         
     </div>
 
-    <div class ="tabContainer">
+    <!-- <div class ="tabContainer">
         <div id ="tab-button">
             <button data-target="buttonCon-sty" id = "story" class="story">Story</button>
             <button data-target="buttonCon-men" id ="menu" class="menu">Menu</button>
@@ -70,7 +70,7 @@
         </div>
         <div id ="buttonCon-men" class ='button-con' hidden>
             Reservation
-        </div>
+        </div> -->
     <div class="tabContainer">
         <div id ="tab-men">
             <div id ="tab-button">
