--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
     <script src="main.js"></script>
     <script src ="tab-menu.js"></script>
-    <script> src="reservation.js"</script>
+    <script src="reservation.js"></script>
    
 </body>
 
