--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             
                     <div>
                       <label for="date">Date</lable>
-                        <input id="date" type="text" name="date" placeholder="">
+                        <input id="date" type="date" name="date" placeholder="">
                     </div>
         
                     <div>
@@ -115,13 +115,13 @@
                         </select>
                     </div>
                         <div>
-                           <input id="reserve" value="Reserve Table" type="submit">     
+                           <button id="reserve">Reserve Table</button>
                         </div>
                        </form>
             </div>
 
         </div>
-        <div id ="buttonCon-res" class="button-con" hidden>
+        <!-- <div id ="buttonCon-res" class="button-con" hidden>
             <form action="">
                 <div>
                     <label for="fullname">Full Name</lable>
@@ -147,10 +147,10 @@
                         <option value="Outdoor">Outdoor</option>
                     </select>
                     <div>
-                        <input id="Reserve" value="Reserve" type="submit"></input>
+                        <input id="reserve" value="Reserve" type="submit"></input>
                     </div>
                 </div>
-            </form>      
+            </form>       -->
             <div class="photocontainer" id ="photoCon">
                 <header class="phototitle">Food Photos...</header>
                 <div class="foodphotos">
@@ -166,7 +166,7 @@
             </div>
     </div>
 
-    <div class="photocontainer" id ="photoCon">
+    <!-- <div class="photocontainer" id ="photoCon">
         <header class="phototitle">Food Photos...</header>
         <div class="foodphotos">
             <img src="https://images.unsplash.com/photo-1580376259349-5f4b7db4c39f?ixid=MXwxMjA3fDB8MHxzZWFyY2h8M3x8c2VhJTIwZm9vZHxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px"></div>
@@ -178,7 +178,7 @@
             <img src="https://images.unsplash.com/photo-1565792508517-94b63bb06dac?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NTB8fHNlYSUyMGZvb2R8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px"></div>
         <div class="foodphotos">
             <img src="https://images.unsplash.com/photo-1590759668642-c596ae357a42?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTEzfHxzZWElMjBmb29kfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px"></div>
-    </div>
+    </div> -->
 
     <footer class="footercontainer">
         <p class="footerp">&#169; 2020 Copyright Big Fish Restaurant Group All Rights Reserved</p>
@@ -187,7 +187,7 @@
 
     <script src="main.js"></script>
     <script src ="tab-menu.js"></script>
-    <script> src="reservation.js"</script>
+    <script src="reservation.js"></script>
    
 </body>
 
