--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
             </div>
             <div id ="buttonCon-men" class ='button-con' hidden>
                 <div id="menu-select">
-                    <button data-target="menuCon-appetizer" id ="menu-appet">Appetizer</button>
-                    <button data-target="menuCon-lunch" id = "lunch">Lunch</button>
-                    <button data-target="menuCon-dinner" id ="dinner">Dinner</button>
-                    <button data-target="menuCon-dessert" id ="men-dessert">Dessert</button>
+                    <button data-target="menuCon-appetizer" id ="menu-appet">APPETIZER</button>
+                    <button data-target="menuCon-lunch" id = "lunch">LUNCH</button>
+                    <button data-target="menuCon-dinner" id ="dinner">DINNER</button>
+                    <button data-target="menuCon-dessert" id ="men-dessert">DESSERT</button>
                 </div>
 
                 <div id ="menuCon-appetizer" class="menu-Con">APPETIZER</div>
