--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <img class="banner" src="https://images.unsplash.com/photo-1528735000313-039ec3a473b0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1951&q=80" style="max-width:100%"alt=""width="100%" height="330px">
     </div>
     
-    <div class="cardContainer">
+    <div class="cardContainer"style="overflow:hidden">
         <div class="box" id="card1">
             <header class="cardheader">Latest News</header>
             <h1 class="cardtitle"style="font-style:bold;font-size: 15px;">Lorem ipsum dolor sit amet Jun 7</h1>
-            <p clasee="cardp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            <p class="cardp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                 Nullam condimentum est diam, nec tincidunt arcu ornare eu. 
                 Ut a massa orci. Nullam sapien nisi, vehicula quis eleifend nec, 
                 maximus sit amet felis. Maecenas eget ipsum ut sapien lobortis 
@@ -43,7 +43,7 @@
             <header class="cardheader">Today's Special</header>
             <img src="https://images.unsplash.com/photo-1522933001375-72d29575cf05?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=8" width="100%" height="135px">
             <h1 class="cardtitle"> Lorem ipsum dolor sit amet...................................27</h1>
-            <p clasee="cardp">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            <p class="cardp">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Nullam condimentum est diam, nec tincidunt arcu ornare eu.</p>
         </div>
         <div class="box" id="card3">
