--- a/index.html
+++ b/index.html
@@ -79,11 +79,12 @@
                     <button data-target="menuCon-dinner" id ="dinner">DINNER</button>
                     <button data-target="menuCon-dessert" id ="men-dessert">DESSERT</button>
                 </div>
-
-                <div id ="menuCon-appetizer" class="menu-Con">APPETIZER</div>
-                <div id ="menuCon-lunch" class="menu-Con" hidden>LUNCH</div>
-                <div id ="menuCon-dinner" class="menu-Con" hidden>DINNER</div>
-                <div id ="menuCon-dessert" class="menu-Con" hidden>DESSERT</div>
+                <div id = 'menu'>
+                    <div id ="menuCon-appetizer" class="menu-Con">APPETIZER</div>
+                    <div id ="menuCon-lunch" class="menu-Con" hidden>LUNCH</div>
+                    <div id ="menuCon-dinner" class="menu-Con" hidden>DINNER</div>
+                    <div id ="menuCon-dessert" class="menu-Con" hidden>DESSERT</div>
+                </div>
             </div>
             <div id ="buttonCon-res" class="button-con" hidden>
                 <form id="form" action=""><div>
@@ -93,7 +94,7 @@
             
                     <div>
                       <label for="guests">Number of Guests</lable>
-                        <input id="guests" type="text" name="guests" placeholder="">
+                        <input id="guests" type="number" name="guests" placeholder="">
                     </div>
             
                     <div>
@@ -121,36 +122,6 @@
             </div>
 
         </div>
-        <!-- <div id ="buttonCon-res" class="button-con" hidden>
-            <form action="">
-                <div>
-                    <label for="fullname">Full Name</lable>
-                    <input id="fullname" type="text" name="fullname" placeholder="">
-                </div>
-                <div>
-                    <label for="guests">Number of Guests</lable>
-                    <input id="guests" type="text" name="guests" placeholder="">
-                </div>
-                <div>
-                     <label for="date">Date</lable>
-                     <input id="date" type="text" name="date" placeholder="">
-                </div>
-                <div>
-                    <label for="notes">Special Notes</lable>
-                    <input id="notes" type="text" name="notes" placeholder="">
-                </div>
-                <div>
-                    <label for="seating">Seating Preference</lable>
-                    <select id="seating" name="seating">
-                        <option value="">Choose a location</option>
-                        <option value="Indoor">Indoor</option>
-                        <option value="Outdoor">Outdoor</option>
-                    </select>
-                    <div>
-                        <input id="reserve" value="Reserve" type="submit"></input>
-                    </div>
-                </div>
-            </form>       -->
             <div class="photocontainer" id ="photoCon">
                 <header class="phototitle">Food Photos...</header>
                 <div class="foodphotos">
@@ -165,26 +136,9 @@
                     <img src="https://images.unsplash.com/photo-1590759668642-c596ae357a42?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTEzfHxzZWElMjBmb29kfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px"></div>
             </div>
     </div>
-
-    <!-- <div class="photocontainer" id ="photoCon">
-        <header class="phototitle">Food Photos...</header>
-        <div class="foodphotos">
-            <img src="https://images.unsplash.com/photo-1580376259349-5f4b7db4c39f?ixid=MXwxMjA3fDB8MHxzZWFyY2h8M3x8c2VhJTIwZm9vZHxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px"></div>
-        <div class="foodphotos">
-            <img src="https://images.unsplash.com/photo-1579712267685-42da80f60aa4?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mjd8fHNlYSUyMGZvb2R8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px"></div>
-        <div class="foodphotos">
-            <img src="https://images.unsplash.com/photo-1598298125949-4c3eba287609?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MjV8fHNlYSUyMGZvb2R8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px"></div>
-        <div class="foodphotos">
-            <img src="https://images.unsplash.com/photo-1565792508517-94b63bb06dac?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NTB8fHNlYSUyMGZvb2R8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px"></div>
-        <div class="foodphotos">
-            <img src="https://images.unsplash.com/photo-1590759668642-c596ae357a42?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTEzfHxzZWElMjBmb29kfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt=""width="100%"height="220px"></div>
-    </div> -->
-
     <footer class="footercontainer">
         <p class="footerp">&#169; 2020 Copyright Big Fish Restaurant Group All Rights Reserved</p>
     </footer>
-
-
     <script src="main.js"></script>
     <script src ="tab-menu.js"></script>
     <script src="reservation.js"></script>
