--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="tab-menu.css">
     <link rel="stylesheet" href="our-story.css">
     <link rel="stylesheet" href="reservation.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <title>Restaurant</title>
 </head>
 <body style="overflow-x:hidden">
@@ -101,7 +102,7 @@
                       <label for="date">Date</lable>
                         <input id="date" type="date" name="date" placeholder="">
                     </div>
-        
+                        
                     <div>
                         <label for="notes">Special Notes</lable>
                             <textarea name="notes" id="notes" cols="30" rows="10"></textarea>
