--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <footer class="footercontainer">
         <p class="footerp">&#169; 2020 Copyright Big Fish Restaurant Group All Rights Reserved</p>
     </footer>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
     <script src ="tab-menu.js"></script>
     <script src="reservation.js"></script>
    
