reservation date required and reset form

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                 </div>
             </div>
             <div id ="buttonCon-res" class="button-con" hidden>
-                <form id="form" action=""><div>
+                <form id="form" action=""  >
+                    <div>
                     <label for="fullname">Full Name</lable>
                         <input id="fullname" type="text" name="fullname" placeholder="">
                     </div>
@@ -117,7 +118,7 @@
                         </select>
                     </div>
                         <div>
-                           <button id="reserve">Reserve Table</button>
+                           <button id="reserve" >Reserve Table</button>
                         </div>
                        </form>
             </div>
