--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                     <img src="https://cdn4.iconfinder.com/data/icons/wirecons-free-vector-icons/32/menu-alt-512.png" alt="">
                 </button>
                 <div class="dropdown-content">
-                    <a href="#">HOME</a>
-                    <a href="#">MENU</a>
-                    <a href="#">CATERING</a>
-                    <a href="#">CONTACT US</a>
-                    <a href="#">JOIN OUR TEAM</a>
+                    <a href="home.html">HOME</a>
+                    <a href="menu.html">MENU</a>
+                    <a href="catering.html">CATERING</a>
+                    <a href="contact.html">CONTACT US</a>
+                    <a href="join.html">JOIN OUR TEAM</a>
                 </div>
               </div>
     </nav>
